Small fix
Co-Authored-By: Afonso Castro <132162815+El-Castro@users.noreply.github.com>
Co-Authored-By: Pedro Oliveira <114242390+up202000149@users.noreply.github.com>